fix: home page overflow, image popover, arrow nav

--- a/styles/global.less
+++ b/styles/global.less
@@ -11,5 +11,6 @@ body {
 }
 
 body:has(#landing_page){
-    overflow: hidden; // fixes issue on mobile with overflow but will prevent other pages (e.g. project) from being hidden
+    // update: mar 8, allow overflow
+    // overflow: hidden; // fixes issue on mobile with overflow but will prevent other pages (e.g. project) from being hidden
 }
