--- a/styles/index.module.less
+++ b/styles/index.module.less
@@ -12,9 +12,9 @@
 .landingPage__block_container {
     display: flex;
     flex-wrap: wrap;
-    height: 100vh;
+    // height: 100vh; allow height to expand
     align-content: flex-start;
-    overflow: hidden;
+    // overflow: hidden; allow scroll
 }
 
 .landingPage__containerSections {
